# koha-offline-circulation

./: .gitignore  CMakeLists.txt  KohaOfflineCirculation.pro  Makefile  README.md  borrowersdb.cpp  borrowersdb.h  borrowersearch.cpp  borrowersearch.h  borrowersearch.ui  credentialstore.cpp  credentialstore.h  koc.qrc  koc.rc  koc.rc.in  koc.ui  kocfile.cpp  kocfile.h  kohadownload.cpp  kohadownload.h  kohasettingsdialog.cpp  kohasettingsdialog.h  kohasettingsdialog.ui  kohaupload.cpp  kohaupload.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  updatecheck.cpp  updatecheck.h
.github/workflows/: build.yml  integration.yml
Windows/: installer.iss
images/icons/: koha.icns
packaging/linux/: kohaofflinecirculation.desktop
packaging/windows/: installer.iss
tests/: mockhttpserver.h  tst_borrowersdb.cpp  tst_credentialstore.cpp  tst_kocfile.cpp  tst_kohadownload.cpp  tst_kohadownload_integration.cpp  tst_kohaupload.cpp  tst_mainwindow.cpp  tst_updatecheck.cpp
tests/integration/: ports.yml  setup-ktd.sh
translations/: koc_es.ts  koc_fr.ts
